ast/tests/snapshots/ast__equal_expr.snap
---
source: ast/tests/ast.rs
expression: parsed.unwrap()
---
(
    AstRecursiveExpression {
        range: AstRange {
            start: AstPoint {
                line: 0,
                col: 0,
            },
            end: AstPoint {
                line: 0,
                col: 6,
            },
        },
        ident: Some(
            Identifier(
                AstIdentifier {
                    range: AstRange {
                        start: AstPoint {
                            line: 0,
                            col: 0,
                        },
                        end: AstPoint {
                            line: 0,
                            col: 1,
                        },
                    },
                    value: "a",
                },
            ),
        ),
        values: None,
        operator: None,
        next: Some(
            AstRecursiveExpression {
                range: AstRange {
                    start: AstPoint {
                        line: 0,
                        col: 2,
                    },
                    end: AstPoint {
                        line: 0,
                        col: 6,
                    },
                },
                ident: None,
                values: None,
                operator: Equal(
                    AstRange {
                        start: AstPoint {
                            line: 0,
                            col: 2,
                        },
                        end: AstPoint {
                            line: 0,
                            col: 4,
                        },
                    },
                ),
                next: Some(
                    AstRecursiveExpression {
                        range: AstRange {
                            start: AstPoint {
                                line: 0,
                                col: 5,
                            },
                            end: AstPoint {
                                line: 0,
                                col: 6,
                            },
                        },
                        ident: Some(
                            Identifier(
                                AstIdentifier {
                                    range: AstRange {
                                        start: AstPoint {
                                            line: 0,
                                            col: 5,
                                        },
                                        end: AstPoint {
                                            line: 0,
                                            col: 6,
                                        },
                                    },
                                    value: "b",
                                },
                            ),
                        ),
                        values: None,
                        operator: None,
                        next: None,
                    },
                ),
            },
        ),
    },
    3,
)
