ast/tests/snapshots/ast__equasion_method_call.snap
---
source: ast/tests/ast.rs
expression: parsed.unwrap()
---
(
    AstRecursiveExpression {
        range: AstRange {
            start: AstPoint {
                line: 0,
                col: 2,
            },
            end: AstPoint {
                line: 0,
                col: 18,
            },
        },
        ident: Some(
            Value(
                Nuget(
                    StringLiteral(
                        AstIdentifier {
                            range: AstRange {
                                start: AstPoint {
                                    line: 0,
                                    col: 2,
                                },
                                end: AstPoint {
                                    line: 0,
                                    col: 3,
                                },
                            },
                            value: "z",
                        },
                    ),
                ),
            ),
        ),
        values: None,
        operator: None,
        instance_of: None,
        next: Some(
            Recursive(
                AstRecursiveExpression {
                    range: AstRange {
                        start: AstPoint {
                            line: 0,
                            col: 4,
                        },
                        end: AstPoint {
                            line: 0,
                            col: 18,
                        },
                    },
                    ident: None,
                    values: None,
                    operator: Plus(
                        AstRange {
                            start: AstPoint {
                                line: 0,
                                col: 4,
                            },
                            end: AstPoint {
                                line: 0,
                                col: 5,
                            },
                        },
                    ),
                    instance_of: None,
                    next: Some(
                        JType(
                            AstCastedExpression {
                                range: AstRange {
                                    start: AstPoint {
                                        line: 0,
                                        col: 6,
                                    },
                                    end: AstPoint {
                                        line: 0,
                                        col: 18,
                                    },
                                },
                                cast: AstJType {
                                    range: AstRange {
                                        start: AstPoint {
                                            line: 0,
                                            col: 6,
                                        },
                                        end: AstPoint {
                                            line: 0,
                                            col: 16,
                                        },
                                    },
                                    value: Access {
                                        ident: AstIdentifier {
                                            range: AstRange {
                                                start: AstPoint {
                                                    line: 0,
                                                    col: 6,
                                                },
                                                end: AstPoint {
                                                    line: 0,
                                                    col: 7,
                                                },
                                            },
                                            value: "a",
                                        },
                                        inner: AstJType {
                                            range: AstRange {
                                                start: AstPoint {
                                                    line: 0,
                                                    col: 8,
                                                },
                                                end: AstPoint {
                                                    line: 0,
                                                    col: 16,
                                                },
                                            },
                                            value: Class(
                                                AstIdentifier {
                                                    range: AstRange {
                                                        start: AstPoint {
                                                            line: 0,
                                                            col: 8,
                                                        },
                                                        end: AstPoint {
                                                            line: 0,
                                                            col: 16,
                                                        },
                                                    },
                                                    value: "getThing",
                                                },
                                            ),
                                        },
                                    },
                                },
                                expression: Recursive(
                                    AstRecursiveExpression {
                                        range: AstRange {
                                            start: AstPoint {
                                                line: 0,
                                                col: 16,
                                            },
                                            end: AstPoint {
                                                line: 0,
                                                col: 18,
                                            },
                                        },
                                        ident: None,
                                        values: Some(
                                            AstValues {
                                                range: AstRange {
                                                    start: AstPoint {
                                                        line: 0,
                                                        col: 16,
                                                    },
                                                    end: AstPoint {
                                                        line: 0,
                                                        col: 18,
                                                    },
                                                },
                                                values: [],
                                            },
                                        ),
                                        operator: None,
                                        instance_of: None,
                                        next: None,
                                    },
                                ),
                            },
                        ),
                    ),
                },
            ),
        ),
    },
    7,
)
