ast/tests/snapshots/ast__expression_base.snap
---
source: ast/tests/ast.rs
expression: parsed.unwrap()
---
(
    AstRecursiveExpression {
        range: AstRange {
            start: AstPoint {
                line: 0,
                col: 0,
            },
            end: AstPoint {
                line: 0,
                col: 28,
            },
        },
        ident: Some(
            Identifier(
                AstIdentifier {
                    range: AstRange {
                        start: AstPoint {
                            line: 0,
                            col: 0,
                        },
                        end: AstPoint {
                            line: 0,
                            col: 6,
                        },
                    },
                    value: "Logger",
                },
            ),
        ),
        values: None,
        next: Some(
            AstRecursiveExpression {
                range: AstRange {
                    start: AstPoint {
                        line: 0,
                        col: 6,
                    },
                    end: AstPoint {
                        line: 0,
                        col: 28,
                    },
                },
                ident: None,
                values: None,
                next: Some(
                    AstRecursiveExpression {
                        range: AstRange {
                            start: AstPoint {
                                line: 0,
                                col: 7,
                            },
                            end: AstPoint {
                                line: 0,
                                col: 28,
                            },
                        },
                        ident: Some(
                            Identifier(
                                AstIdentifier {
                                    range: AstRange {
                                        start: AstPoint {
                                            line: 0,
                                            col: 7,
                                        },
                                        end: AstPoint {
                                            line: 0,
                                            col: 16,
                                        },
                                    },
                                    value: "getLogger",
                                },
                            ),
                        ),
                        values: None,
                        next: Some(
                            AstRecursiveExpression {
                                range: AstRange {
                                    start: AstPoint {
                                        line: 0,
                                        col: 16,
                                    },
                                    end: AstPoint {
                                        line: 0,
                                        col: 28,
                                    },
                                },
                                ident: None,
                                values: Some(
                                    AstValues {
                                        range: AstRange {
                                            start: AstPoint {
                                                line: 0,
                                                col: 16,
                                            },
                                            end: AstPoint {
                                                line: 0,
                                                col: 28,
                                            },
                                        },
                                        values: [
                                            Recursive(
                                                AstRecursiveExpression {
                                                    range: AstRange {
                                                        start: AstPoint {
                                                            line: 0,
                                                            col: 17,
                                                        },
                                                        end: AstPoint {
                                                            line: 0,
                                                            col: 27,
                                                        },
                                                    },
                                                    ident: Some(
                                                        Identifier(
                                                            AstIdentifier {
                                                                range: AstRange {
                                                                    start: AstPoint {
                                                                        line: 0,
                                                                        col: 17,
                                                                    },
                                                                    end: AstPoint {
                                                                        line: 0,
                                                                        col: 21,
                                                                    },
                                                                },
                                                                value: "Test",
                                                            },
                                                        ),
                                                    ),
                                                    values: None,
                                                    next: Some(
                                                        AstRecursiveExpression {
                                                            range: AstRange {
                                                                start: AstPoint {
                                                                    line: 0,
                                                                    col: 21,
                                                                },
                                                                end: AstPoint {
                                                                    line: 0,
                                                                    col: 27,
                                                                },
                                                            },
                                                            ident: None,
                                                            values: None,
                                                            next: Some(
                                                                AstRecursiveExpression {
                                                                    range: AstRange {
                                                                        start: AstPoint {
                                                                            line: 0,
                                                                            col: 22,
                                                                        },
                                                                        end: AstPoint {
                                                                            line: 0,
                                                                            col: 27,
                                                                        },
                                                                    },
                                                                    ident: Some(
                                                                        Identifier(
                                                                            AstIdentifier {
                                                                                range: AstRange {
                                                                                    start: AstPoint {
                                                                                        line: 0,
                                                                                        col: 22,
                                                                                    },
                                                                                    end: AstPoint {
                                                                                        line: 0,
                                                                                        col: 27,
                                                                                    },
                                                                                },
                                                                                value: "class",
                                                                            },
                                                                        ),
                                                                    ),
                                                                    values: None,
                                                                    next: None,
                                                                    operator: None,
                                                                },
                                                            ),
                                                            operator: Dot(
                                                                AstRange {
                                                                    start: AstPoint {
                                                                        line: 0,
                                                                        col: 21,
                                                                    },
                                                                    end: AstPoint {
                                                                        line: 0,
                                                                        col: 22,
                                                                    },
                                                                },
                                                            ),
                                                        },
                                                    ),
                                                    operator: None,
                                                },
                                            ),
                                        ],
                                    },
                                ),
                                next: None,
                                operator: None,
                            },
                        ),
                        operator: None,
                    },
                ),
                operator: Dot(
                    AstRange {
                        start: AstPoint {
                            line: 0,
                            col: 6,
                        },
                        end: AstPoint {
                            line: 0,
                            col: 7,
                        },
                    },
                ),
            },
        ),
        operator: None,
    },
    8,
)
