ast/tests/snapshots/ast__jtype_int_array.snap
---
source: ast/tests/ast.rs
expression: parsed
---
(
    AstJType {
        range: AstRange {
            start: AstPoint {
                line: 0,
                col: 0,
            },
            end: AstPoint {
                line: 0,
                col: 5,
            },
        },
        value: Array(
            AstJType {
                range: AstRange {
                    start: AstPoint {
                        line: 0,
                        col: 0,
                    },
                    end: AstPoint {
                        line: 0,
                        col: 3,
                    },
                },
                value: Int,
            },
        ),
    },
    3,
)
